iptables
# Autor: Alyson Franklin - AlysonFranklinReal@gmail.com
# Descrição: Regras do iptables para usuário doméstico
# Generated by iptables-save v1.4.7 on Sat Sep 29 23:32:00 2018
#
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [27:3344]

# Se dentro de um minuto o cliente tentou 4 vezes acessar meu servidor, ele será bloqueado durante um minuto.
-A INPUT -p tcp -m tcp --dport 2222 --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -m limit --limit 1/min --limit-burst 4 -j ACCEPT 

# Log de tentativa de conexão via ssh em /var/log/kern.log ou /var/log/syslog
-A INPUT -p tcp -m tcp --dport 2222 --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -m limit --limit 1/min --limit-burst 4 -j LOG --log-prefix "CONEXÃO SSH " 

# Depois da quarta tentativa de login sem sucesso, ele informa "conexão recusada"
-A INPUT -p tcp -m tcp --dport 2222 --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j REJECT --reject-with icmp-port-unreachable 

# Cada IP só pode abrir 4 conexões SSH no meu servidor
-A INPUT -p tcp -m tcp --dport 2222 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 4 --connlimit-mask 32 -j REJECT --reject-with icmp-port-unreachable 

# Cada IP só pode abrir 2 conexões na porta 5940 do meu servidor/teamviewer
-A INPUT -p tcp -m tcp --dport 5940 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 2 --connlimit-mask 32 -j REJECT --reject-with icmp-port-unreachable

# Cada IP só pode abrir 10 conexões na porta 80/HTTP do meu servidor - LAB WebServer
-A INPUT -p tcp -m tcp --dport 80 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 10 --connlimit-mask 32 -j REJECT --reject-with icmp-port-unreachable

# Se dentro de um minuto o cliente tentou 4 vezes acessar meu servidor QBitorrent, ele será bloqueado durante um minuto.
-A INPUT -p tcp -m tcp --dport 8000 --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -m limit --limit 1/min --limit-burst 4 -j ACCEPT 

# Cada IP só pode abrir 2 conexões na porta 8000 do meu servidor Qbitorrent
-A INPUT -p tcp -m tcp --dport 8000 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 2 --connlimit-mask 32 -j REJECT --reject-with icmp-port-unreachable

# Log de tentativa de conexão via QBitorrent em /var/log/kern.log
-A INPUT -p tcp -m tcp --dport 8000 --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -m limit --limit 1/min --limit-burst 2 -j LOG --log-prefix "CONEXÃO QBITORRENT " 

# Cada IP só pode abrir 10 conexões na porta 443/HTTPS do meu servidor
-A INPUT -p tcp -m tcp --dport 443 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 10 --connlimit-mask 32 -j REJECT --reject-with icmp-port-unreachable  

# Cada IP só pode abrir 5 conexões na porta 10050/Zabbix-Server do meu servidor
-A INPUT -p tcp -m tcp --dport 10050 --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 10 --connlimit-mask 32 -j REJECT --reject-with icmp-port-unreachable

# SSH  
-A INPUT -p tcp -m tcp --dport 2222 -m state --state NEW -j ACCEPT 

# TeamViewer
-A INPUT -p tcp -m tcp --dport 5939 -m state --state NEW -j ACCEPT 

# SMTP
-A INPUT -p tcp -m tcp --dport 25 -m state --state NEW -j ACCEPT 

# DNS
-A INPUT -p udp -m udp --dport 53 -m state --state NEW -j ACCEPT 

# NTP
-A INPUT -p udp -m udp --dport 123 -m state --state NEW -j ACCEPT 

# Portas utilizadas pelo Samba/SMB
-A INPUT -p udp -m multiport --dports 111,137,138 -m state --state NEW -j ACCEPT 

# SNMP
-A INPUT -p udp -m udp --dport 161 -m state --state NEW -j ACCEPT 

# SNMPTRAP
-A INPUT -p udp -m udp --dport 162 -m state --state NEW -j ACCEPT 

# NetBIOS
-A INPUT -p tcp -m tcp --dport 139 -m state --state NEW -j ACCEPT 

# Active Directory/SMB
-A INPUT -p tcp -m tcp --dport 445 -m state --state NEW -j ACCEPT 

# HTTP
-A INPUT -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT

# HTTPS
-A INPUT -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT  

# Zabbix
-A INPUT -p tcp -m tcp --dport 10050 -m state --state NEW -j ACCEPT

# Qbitorrent
-A INPUT -p tcp -m tcp --dport 8000 -m state --state NEW -j ACCEPT

# Limita todas essas flags a 5. Caso passe de 5, DROPA conexão. 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK SYN -m limit --limit 1/sec -j ACCEPT 

# Limitando ping da morte - Apenas um IP consegue pingar este servidor. Se dois IP's tentarem pingar este servidor, ele vai DROPAR as conexões
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec --limit-burst 1 -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 8 -j DROP 
-A INPUT -p icmp -m icmp --icmp-type 3 -m limit --limit 1/sec --limit-burst 1 -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 3 -j DROP 
-A INPUT -p icmp -m icmp --icmp-type 0 -m limit --limit 1/sec -j RETURN 

# Aceita conexões à partir do loopback
-A INPUT -i lo -j ACCEPT 

# Aceita conexões estabelecidas
-A INPUT -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p udp -m state --state RELATED,ESTABLISHED -j ACCEPT 

# Dropa conexões no estado inválido
-A INPUT -m state --state INVALID -j DROP 

# Bloqueando maquinas Windows que tentam pingar meu servidor com TTL
-A INPUT -m ttl --ttl-lt 40 -j REJECT --reject-with icmp-port-unreachable 

# Loga qualquer informação
-A INPUT -j LOG --log-prefix "LOG INPUT Firewall " 

# Tudo que estiver fora de minhas regras, serão rejeitados
-A INPUT -j REJECT --reject-with icmp-port-unreachable 

# Se alguém tentar usar meu servidor como repasse, ele também vai logar as informações
-A FORWARD -j LOG --log-prefix "LOG FORWARD Firewall " 

# Não é permitido fazer repasse/usar meu servidor como gateway
-A FORWARD -j REJECT --reject-with icmp-port-unreachable 
COMMIT

# https://www.drawerhost.com.br/blog/2018/01/30/10-regras-do-firewall-iptables-que-todo-sysadmin-linux-deve-conhecer/
